--- a/src/view/FileInfo.html
+++ b/src/view/FileInfo.html
@@ -35,7 +35,7 @@
                         <td> 请求方式&nbsp;{$vo.method|default=''}</td>
                     </tr>
                     <tr>
-                        <td> 地址:&nbsp;{$vo.host|default=''}</td>
+                        <td> 地址:&nbsp;{$vo.host|default=''}{$vo.uri}</td>
                     </tr>
                     <tr>
                         <td>{$vo.reqs|default=''}</td>
